--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "expect": "^1.20.2",
     "express": "^4.13.4",
     "express-beautify": "^0.1.2",
+    "fsevents": "^1.2.4",
     "jest": "^22.4.4",
     "jsdom": "^9.4.1",
     "nodemon": "^1.8.1",
